# trackmate

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
locale/en/LC_MESSAGES/: django.po
profiles/: api_views.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
profiles/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar_alter_profile_bio.py  0004_profile_age_profile_first_name_profile_gender_and_more.py
profiles/templates/: edit_profile.html  profile.html  profile_update.html
src/: manage.py
src/apps/profiles/: admin.py  api.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/tasks/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/users/: forms.py  models.py  validators.py  views.py
src/profiles/: urls.py  views.py
src/profiles/migrations/: 0001_initial.py
src/tasks/: models.py  views.py
src/tasks/templates/: task_update.html
src/trackmate/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: forms.py  models.py
static/profiles/js/: chart.js
static/tasks/js/: ajax_status.js  status.js  themes.js
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_сreated_at.py  0003_alter_task_description.py  0004_alter_task_сreated_at.py  0005_rename_сreated_at_task_created_at.py
tasks/templates/: base.html  index.html  task_update.html  tasks.html  update.html
trackmate/: settings.py  urls.py
users/: admin.py  forms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
(+32 files in other folders)
