[tool.poetry]
name = "trackmate"
version = "1.0.0"
description = "Tracker and Task Manager"
authors = ["Maksim <mksmvnv@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
black = "^24.8.0"
python-dotenv = "^1.0.1"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
