[tool.black]
target-version = ["py312"]

[tool.poetry]
name = "trackmate"
version = "1.0.0"
description = "Tracker and Task Manager"
authors = ["Maksim <mksmvnv@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
black = "^24.8.0"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
pip = "^24.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
